force-app/main/default/objects/Theme__c/Theme__c.object-meta.xml
<CustomObject>
    <label>テーマ</label>
    <nameField>
        <label>テーマ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>