force-app/main/default/objects/Theme__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署</label>
    <type>Text</type>
</CustomField>