force-app/main/default/objects/Theme__c/fields/LastActivityContent__c.field-meta.xml
<CustomField>
    <fullName>LastActivityContent__c</fullName>
    <label>最終活動内容</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>