force-app/main/default/objects/Theme__c/fields/MarketTarget__c.field-meta.xml
<CustomField>
    <fullName>MarketTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>市場対象</label>
    <type>Checkbox</type>
</CustomField>