force-app/main/default/objects/Theme__c/fields/MT_Field__c.field-meta.xml
<CustomField>
    <fullName>MT_Field__c</fullName>
    <label>分野</label>
    <length>255</length>
    <type>Text</type>
</CustomField>