force-app/main/default/objects/Theme__c/fields/NextExpectedforthistermRevenu__c.field-meta.xml
<CustomField>
    <fullName>NextExpectedforthistermRevenu__c</fullName>
    <formula>IF(
OR(SalesPeriod__c - ThisPeriod__c = 1)
,IF (spot__c
,RemainingEstimateAmount__c
,IF (Month(occur_revenu_month__c) &lt; 7 , RemainingEstimateAmount__c * (7- Month(occur_revenu_month__c)) /12 , RemainingEstimateAmount__c * (19- Month(occur_revenu_month__c)) /12))
,IF (spot__c, 0 ,RemainingEstimateAmount__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>来期売上想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>