force-app/main/default/objects/Theme__c/fields/NextTermAmount__c.field-meta.xml
<CustomField>
    <fullName>NextTermAmount__c</fullName>
    <description>IF(OR(AND(spot__c ,SalesPeriod__c != ThisPeriod__c + 1) , ISPICKVAL(Phase__c, &apos;撤退&apos;))
		,0
		,IF(SalesPeriod__c -ThisPeriod__c = 0 
		,RemainingEstimateAmount__c * 0.3 / 0.8
		,if(SalesPeriod__c -ThisPeriod__c = 1
						,(IF (Month(occur_revenu_month__c) &lt; 7 
											, RemainingEstimateAmount__c * (7- Month(occur_revenu_month__c)) /12 
											, RemainingEstimateAmount__c * (19- Month(occur_revenu_month__c)) /12) * 0.3 / 0.8)
						,0)))</description>
    <formula>IF(
    OR(SalesPeriod__c - ThisPeriod__c = 1)
				,IF (spot__c
									,NextExpectedforthistermRevenu__c * 0.3 /0.8
									,NextExpectedforthistermRevenu__c * 0.3 /0.8)
				,0
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI指標金額（来期）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>