force-app/main/default/objects/Theme__c/fields/occur_revenu_month__c.field-meta.xml
<CustomField>
    <fullName>occur_revenu_month__c</fullName>
    <label>売上発生月</label>
    <type>Date</type>
</CustomField>