force-app/main/default/objects/Theme__c/fields/occur_revenu_month_Initial__c.field-meta.xml
<CustomField>
    <fullName>occur_revenu_month_Initial__c</fullName>
    <label>当初売上予定月（日付）</label>
    <type>Date</type>
</CustomField>