force-app/main/default/objects/Theme__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>追及中</fullName>
                <default>true</default>
                <label>追及中</label>
            </value>
            <value>
                <fullName>一部案件化</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>撤退</fullName>
            </value>
            <value>
                <fullName>案件化</fullName>
                <isActive>false</isActive>
                <label>案件化</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>