force-app/main/default/objects/Theme__c/fields/RemainingEstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingEstimateAmount__c</fullName>
    <label>残テーマ概算金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>