force-app/main/default/objects/Theme__c/fields/SalesPeriod__c.field-meta.xml
<CustomField>
    <fullName>SalesPeriod__c</fullName>
    <formula>IF (Month(occur_revenu_month__c) &lt; 7 , Year(occur_revenu_month__c) , Year(occur_revenu_month__c) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上発生期</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>