force-app/main/default/objects/Theme__c/fields/spot__c.field-meta.xml
<CustomField>
    <fullName>spot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スポット</label>
    <type>Checkbox</type>
</CustomField>