force-app/main/default/objects/Theme__c/fields/ThemeAccount__c.field-meta.xml
<CustomField>
    <fullName>ThemeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>テーマ</relationshipLabel>
    <relationshipName>ThemeAccount</relationshipName>
    <type>Lookup</type>
</CustomField>