force-app/main/default/objects/Theme__c/fields/ThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>ThisPeriod__c</fullName>
    <formula>IF ( Month(TODAY() ) &lt; 7 , Year(TODAY()) , Year(TODAY()) + 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今期</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>