force-app/main/default/objects/Theme__c/fields/ThisTermAmount_old__c.field-meta.xml
<CustomField>
    <fullName>ThisTermAmount_old__c</fullName>
    <formula>ExpectedforthistermRevenu_Old__c *0.3/0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI指標金額（今期）_old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>