force-app/main/default/objects/Theme__c/recordTypes/RecordTypeMAP.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeMAP</fullName>
    <active>true</active>
    <label>マテコ計画</label>
</RecordType>