force-app/main/default/objects/Theme__c/recordTypes/RecordTypeMT.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeMT</fullName>
    <active>true</active>
    <label>マテコ</label>
</RecordType>