force-app/main/default/objects/Theme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>ThemeAccount__c</columns>
    <columns>ThisTermAmount_old__c</columns>
    <columns>NextTermAmount_old__c</columns>
    <columns>Phase__c</columns>
    <columns>ExpectedforthistermRevenu_Old__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>